* Make the kernel (and boot loader) version of vsnprintf() (that backs up all   formatted printing) aware of '%%', closing bug #2953.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28323 a95241bf-73f2-0310-859d-f6bbb57e9c96